--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
   	<mockito.version>2.13.0</mockito.version>
   	<powermock.version>1.7.3</powermock.version>
   	<catch-exception.version>1.4.6</catch-exception.version>
-  	<junit-platform.version>1.0.3</junit-platform.version>
-  	<junit-jupiter.version>5.0.3</junit-jupiter.version>
+  	<junit.version>4.12</junit.version>
   </properties>
   
   <dependencies>
@@ -97,16 +96,9 @@
 	</dependency>
 	
 	<dependency>
-	    <groupId>org.junit.platform</groupId>
-	    <artifactId>junit-platform-launcher</artifactId>
-	    <version>${junit-platform.version}</version>
-	    <scope>test</scope>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.junit.jupiter</groupId>
-	    <artifactId>junit-jupiter-api</artifactId>
-	    <version>${junit-jupiter.version}</version>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>${junit.version}</version>
 	    <scope>test</scope>
 	</dependency>
 	
